feat: env & music task